serve-main/kubernetes/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: serve
#   labels:
#     app: serve
# spec:
#   ports:
#     - port: 8080
#       targetPort: 8080
#   selector:
#     app: serve
#     type: "ClusterIP"


apiVersion: v1
kind: Service
metadata:
  name: serve-backend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/actuator/health"
spec:
  selector:
    app: serve-backend
  type: NodePort
  ports:
    - port: 80 # 서비스가 생성할 포트
      targetPort: 8080 # 서비스가 접근할 pod의 포트
      protocol: TCP
