serve-main/kubernetes/testservice.yml
apiVersion: v1
kind: Service
metadata:
  name: mario
spec:
  selector:
    app: mario
  type: NodePort
  ports:
    - port: 80 # 서비스가 생성할 포트
      targetPort: 8080 # 서비스가 접근할 pod의 포트
      protocol: TCP
